Multiple fixes: - Added ability to close floating button on click outside (and hide it afterwards) - Update floating button color per new mockup - Fix issue where scrollbar would show when not needed in open panels - fix issue where carousel's caption area would not fill the height of the container

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -11,7 +11,7 @@
 
 .advanced-carousel-content-container {
   width: var(--panel-title-width);
-  height: calc(100vh - calc(var(--navbar-height) + var(--footer-height) + 2rem));
+  height: calc(100vh - calc(var(--navbar-height) + var(--footer-height)));
   background-image: linear-gradient(to bottom, #3A225E -43%, #7E6EB2);
   position: relative;
 }
